# yt-live-list

./: .dockerignore  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml
src/yt_live_list/: __init__.py  app.py  auth.py  cache.py  models.py  youtube.py
src/yt_live_list/static/: style.css
src/yt_live_list/templates/: error.html  index.html
tests/: conftest.py  test_app.py  test_auth.py  test_cache.py  test_youtube.py  test_youtube_client.py
