[project]
name = "yt-live-list"
version = "0.1.0"
description = "A tiny page listing your recent YouTube live broadcasts"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "google-auth-oauthlib>=1.4.0",
    "jinja2>=3.1.6",
    "requests>=2.34.2",
    "uvicorn>=0.51.0",
]

[project.scripts]
yt-live-list-auth = "yt_live_list.auth:main"

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.3",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
